--- a/webpage-with-style.html
+++ b/webpage-with-style.html
@@ -1,11 +1,26 @@
 <html>
     <head>
         <title>Webpage with Style</title>
+
+        <style type="text/css">
+
+            p {
+                color: red;
+                font-size: 200%;
+            }
+
+            h1 {
+                color: pink;
+                
+            }
+
+        </style>
     </head>
 
     <body>
-        <h1 style="color:green; font-size:250%">CSS is cool!</h1>
-        <p style="color:aqua; font-size:200%">A friend in need is a friend indeed</p>
+        <h1>CSS is cool!</h1>
+        <p>A friend in need is a friend indeed</p>
+        <p>Internal CSS is awesome!</p>
 
     </body>
 </html>
